# RLEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_clean_cache.cmake  imgui.ini
assets/scripts/: Level1.lua  Level2.lua
doc/: FlecsMigrationGuide.md
examples/: FlecsDirect.cpp
src/: Main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/Components/: AnimationComponent.hpp  BoxColliderComponent.hpp  CameraFollowComponent.hpp  HealthComponent.hpp  KeyboardControlComponent.hpp  ProjectileComponent.hpp  ProjectileEmitterComponent.hpp  RigidBodyComponent.hpp  ScriptComponent.hpp  SpriteComponent.hpp  TextLabelComponent.hpp  TransformComponent.hpp
src/ECS/: ECS.cpp  ECS.hpp  EntityBridge.hpp  FlecsAnimationSystems.cpp  FlecsBridge.cpp  FlecsBridge.hpp  FlecsCameraSystems.cpp  FlecsCleanupSystems.cpp  FlecsCollisionSystems.cpp  FlecsGameWorld.cpp  FlecsGameWorld.hpp  FlecsInputSystems.cpp  FlecsMovementSystems.cpp  FlecsProjectileSystems.cpp  FlecsRenderSystems.cpp  FlecsScriptSystems.cpp  FlecsSystems.hpp
src/EventBus/: Event.hpp  EventBus.hpp
src/Events/: CollisionEvent.hpp  KeyPressedEvent.hpp
src/Game/: Game.cpp  Game.hpp  LevelLoader.cpp  LevelLoader.hpp
src/Systems/: AnimationSystem.hpp  CameraFollowSystem.hpp  CollisionSystem.hpp  DamageSystem.hpp  DirectFlecsSystem.hpp  KeyboardControlSystem.hpp  KeyboardControlSystemFlecs.hpp  MovementSystem.hpp  MovementSystemFlecs.hpp  ProjectileEmitterSystem.hpp  ProjectileEmitterSystemFlecs.hpp  ProjectileLifecycleSystem.hpp  RenderColliderSystem.hpp  RenderDebugGUISystem.hpp  RenderDebugGUISystemFlecs.hpp  RenderHealthBarSystem.hpp  RenderSystem.hpp  RenderSystemFlecs.hpp  RenderTextSystem.hpp  ScriptSystem.hpp
